<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_white">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:gravity="center"
            android:textSize="@dimen/smaller_text"
            android:elevation="1dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/cardView"
            app:layout_constraintTop_toTopOf="@id/cardView"
            tools:text="@string/daily_header" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:layout_margin="24dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:ignore="MissingConstraints"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textSize="@dimen/smaller_text"
            android:elevation="1dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/today"
            app:layout_constraintBottom_toTopOf="@+id/today"
            tools:text="@string/daily_date" />

        <TextView
            android:id="@+id/today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:gravity="center"
            android:textSize="@dimen/big_text"
            android:elevation="1dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/cardView"
            app:layout_constraintBottom_toBottomOf="@id/cardView"
            tools:text="@string/daily_today" />

        <TextView
            android:id="@+id/titleDown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:textSize="@dimen/bigger_text"
            app:layout_constraintStart_toStartOf="@id/cardView"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            tools:text="@string/daily_explanation" />

        <TextView
            android:id="@+id/explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:textSize="16dp"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toStartOf="@id/titleDown"
            app:layout_constraintTop_toBottomOf="@id/titleDown"
            tools:text="@string/daily_article" />

        <include
            layout="@layout/layout_error_loading"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

